2025-11-06 Janko Stamenović

	* sdas/asz80/z80.h
	  sdas/asz80/z80adr.c
	  sdas/asz80/z80mch.c
	  sdas/asz80/z80pst.c
	  sdas/asxxsrc/asxxxx.h
	  Rebasing sdas assemblers to the current upstream: asz80

2025-11-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c,
	  support/regression/tests/bug-3894.c:
	  Fix bug #3894.

2025-11-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge undefined branch.

2025-11-04 Janko Stamenović

	* sdas/asxxsrc/asexpr.c
	  sdas/asxxsrc/aslist.c
	  sdas/asxxsrc/asmain.c
	  sdas/asxxsrc/asout.c
	  sdas/asxxsrc/assym.c
	  sdas/asxxsrc/asxxxx.h
	  Third rebasing sdas assemblers to the current upstream

2025-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3791.c,
	  support/valdiag/tests/bug-3791.c:
	  Follow-up work on test cases after N3571 resolution for C23 UB.

2025-11-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c:
	  Improvements for register storage class diagnostics in preparation for work on C23 UB for arrays with register storage class.

2025-11-02 Janko Stamenović

	* sdas/asxxsrc/asdata.c
	  sdas/asxxsrc/asxxxx.h
	  More rebasing sdas assemblers to the current upstream

2025-10-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  support/valdiag/tests/undefinedc23.c:
	  Implement N3481 resolution for C23 UB.

2025-10-30 Janko Stamenović

	* sdas/asxxsrc/asdbg.c
	  sdas/asxxsrc/aslex.c
	  sdas/asxxsrc/asmcro.c
	  sdas/asxxsrc/assubr.c
	  Start rebasing sdas assemblers to the current upstream

2025-10-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCutil.c,
	  support/valdiag/tests/undefinedc23.c:
	  Partially (UCN only) implement N3672 resolution for C23 UB.

2025-10-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCC.lex,
	  src/SDCCerr.c,
	  src/SDCCerr.h,